--- a/index.html
+++ b/index.html
@@ -61,13 +61,99 @@
 
     <main>
       <!--Content-->
+
+      <!-- Hero -->
+
       <section class="hero-title">
         <div class="container">
           <h1 class="hero-text">
             эффективные решения <br />
             для вашего бизнеса
           </h1>
-          <a class="button" href="">Заказать услугу</a>
+          <button class="hero-button" type="button" data-modal-open>
+            Заказать услугу
+          </button>
+        </div>
+
+        <div class="backdrop is-hidden" data-modal>
+          <div class="modal">
+            <form class="hero-form" autocomplete="off">
+              <b class="form-title">Оставьте свои данные, мы вам перезвоним</b>
+
+              <div class="form-field">
+                <input
+                  class="modal-input"
+                  type="text"
+                  name="name"
+                  id="name"
+                  placeholder=" "
+                />
+                <label class="modal-label" for="name">Имя</label>
+                <svg class="icon-modal" width="18" height="18">
+                  <use href="./images/sprite.svg#person"></use>
+                </svg>
+              </div>
+
+              <div class="form-field">
+                <input
+                  class="modal-input"
+                  type="tel"
+                  name="tel"
+                  id="tel"
+                  placeholder=" "
+                />
+                <label class="modal-label" for="tel">Телефон</label>
+                <svg class="icon-modal" width="18" height="18">
+                  <use href="./images/sprite.svg#phone"></use>
+                </svg>
+              </div>
+
+              <div class="form-field">
+                <input
+                  class="modal-input"
+                  type="email"
+                  name="mail"
+                  id="mail"
+                  placeholder=" "
+                />
+                <label class="modal-label" for="mail">Почта</label>
+                <svg class="icon-modal" width="18" height="18">
+                  <use href="./images/sprite.svg#email"></use>
+                </svg>
+              </div>
+
+              <div class="form-field">
+                <textarea
+                  class="textarea"
+                  name="comment"
+                  id="comment"
+                  rows="6"
+                  placeholder=" "
+                ></textarea>
+                <label class="textarea-label" for="comment">Комментарий</label>
+              </div>
+
+              <div class="terms-field">
+                <label class="label-checkbox">
+                  <input
+                    class="input-checkbox"
+                    type="checkbox"
+                    name="checkbox"
+                  />
+                  <span class="icon-checkbox"></span>
+
+                  Соглашаюсь с рассылкой и принимаю
+                  <a href="#" class="link terms"> Условия договора</a>
+                </label>
+              </div>
+              <button class="button-submit" type="submit">Отправить</button>
+            </form>
+            <button class="modal-button" data-modal-close>
+              <svg class="icon-close" width="18" height="18">
+                <use href="./images/sprite.svg#close"></use>
+              </svg>
+            </button>
+          </div>
         </div>
       </section>
 
