--- a/portfolio.html
+++ b/portfolio.html
@@ -122,12 +122,13 @@
                     height="294"
                   />
                   <div class="project-overlay">
-                  <p class="project-text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </div>
+                    <p class="project-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="project-box">
                   <h3 class="project-title">
@@ -147,12 +148,13 @@
                     height="294"
                   />
                   <div class="project-overlay">
-                  <p class="project-text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </div>
+                    <p class="project-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="project-box">
                   <h3 class="project-title">
@@ -172,12 +174,13 @@
                     height="294"
                   />
                   <div class="project-overlay">
-                  <p class="project-text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </div>
+                    <p class="project-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="project-box">
                   <h3 class="project-title">
@@ -197,12 +200,13 @@
                     height="294"
                   />
                   <div class="project-overlay">
-                  <p class="project-text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </div>
+                    <p class="project-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="project-box">
                   <h3 class="project-title">
@@ -222,12 +226,13 @@
                     height="294"
                   />
                   <div class="project-overlay">
-                  <p class="project-text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </div>
+                    <p class="project-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="project-box">
                   <h3 class="project-title" lang="en">
@@ -247,12 +252,13 @@
                     height="294"
                   />
                   <div class="project-overlay">
-                  <p class="project-text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </div>
+                    <p class="project-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="project-box">
                   <h3 class="project-title">
@@ -272,12 +278,13 @@
                     height="294"
                   />
                   <div class="project-overlay">
-                  <p class="project-text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </div>
+                    <p class="project-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="project-box">
                   <h3 class="project-title">
@@ -297,12 +304,13 @@
                     height="294"
                   />
                   <div class="project-overlay">
-                  <p class="project-text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-                </p>
-                </div>
+                    <p class="project-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="project-box">
                   <h3 class="project-title" lang="en">Growing Business</h3>
@@ -379,12 +387,20 @@
           <!--Subscription-->
           <div class="footer-subscription">
             <b class="subscription">подпишитесь на рассылку</b>
-            <button class="subscribe-button" type="button">
-              Подписаться
-              <svg class="button-icon">
-                <use href="./images/sprite.svg#send"></use>
-              </svg>
-            </button>
+            <form>
+              <input
+                class="form-input"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+              />
+              <button class="submit-button" type="submit">
+                Подписаться
+                <svg class="button-icon">
+                  <use href="./images/sprite.svg#send"></use>
+                </svg>
+              </button>
+            </form>
           </div>
         </div>
 
